logs/nagios-sentry.log
Listing '.'...
Listing './bin'...
Compiling './bin/check_sentry_messages.py'...
***   File "./bin/check_sentry_messages.py", line 64
    print '{0}: {1}'.format(status, output)
                   ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nagios_sentry'...
Listing './lib/python3.5/site-packages/nagios_sentry/management'...
Listing './lib/python3.5/site-packages/nagios_sentry/management/commands'...
Compiling './lib/python3.5/site-packages/nagios_sentry/management/commands/count_of_messages.py'...
***   File "./lib/python3.5/site-packages/nagios_sentry/management/commands/count_of_messages.py", line 54
    print queryset.count()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nagios_sentry-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
